--- a/src/main/resources/views/layouts/header.html
+++ b/src/main/resources/views/layouts/header.html
@@ -91,7 +91,7 @@
           <div class="hidden md:flex items-center space-x-6 text-black">
             <a href="/" class="text-black hover:text-[#cb5439] transition-colors font-bold">Trang chủ</a>
             <a href="/products" class="text-black hover:text-[#cb5439] transition-colors font-bold">Sản phẩm</a>
-            <a href="/news" class="text-black hover:text-[#cb5439] transition-colors font-bold">Tin tức</a>
+            <!-- <a href="/news" class="text-black hover:text-[#cb5439] transition-colors font-bold">Tin tức</a> -->
             <a href="/about" class="text-black hover:text-[#cb5439] transition-colors font-bold">Giới thiệu</a>
             <a href="/contact" class="text-black hover:text-[#cb5439] transition-colors font-bold">Liên hệ</a>
           </div>
@@ -113,7 +113,7 @@
           <a href="/" class="block py-2 px-4 hover:bg-red-600 rounded transition-colors font-bold">Trang chủ</a>
           <a href="/about" class="block py-2 px-4 hover:bg-red-600 rounded transition-colors font-bold">Giới thiệu</a>
           <a href="/products" class="block py-2 px-4 hover:bg-red-600 rounded transition-colors font-bold">Sản phẩm</a>
-          <a href="/news" class="block py-2 px-4 hover:bg-red-600 rounded transition-colors font-bold">Tin tức</a>
+          <!-- <a href="/news" class="block py-2 px-4 hover:bg-red-600 rounded transition-colors font-bold">Tin tức</a> -->
           <a href="/contact" class="block py-2 px-4 hover:bg-red-600 rounded transition-colors font-bold">Liên hệ</a>
                 </div>
             </div>
